--- a/index.ipynb
+++ b/index.ipynb
@@ -103,11 +103,7 @@
     "\n",
     "x_squared = [(1, 2)]\n",
     "range_twenty_four = list(range(0, 25))\n",
-    "six = list(map(lambda x: x/4.0, range_twenty_four))\n",
-    "\n",
-    "trace_x_squared = function_values_trace(x_squared, six)\n",
-    "layout = build_layout(x_axis = {'title': 'number of seconds'}, y_axis = {'title': 'distance'})\n",
-    "plot([trace_x_squared], layout)"
+    "range_twenty_four"
    ]
   },
   {
@@ -115,7 +111,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "six = list(map(lambda x: x/4.0, range_twenty_four))\n",
+    "\n",
+    "trace_x_squared = function_values_trace(x_squared, six)\n",
+    "layout = build_layout(x_axis = {'title': 'number of seconds'}, y_axis = {'title': 'distance'})\n",
+    "plot([trace_x_squared], layout)"
+   ]
   },
   {
    "cell_type": "markdown",
