--- a/index.ipynb
+++ b/index.ipynb
@@ -220,7 +220,15 @@
    "outputs": [],
    "source": [
     "six = list(map(lambda x: x/4.0, range_twenty_four))\n",
-    "\n",
+    "six\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "trace_x_squared = function_values_trace(x_squared, six)\n",
     "layout = build_layout(x_axis = {'title': 'number of seconds'}, y_axis = {'title': 'distance'})\n",
     "plot([trace_x_squared], layout)"
