--- a/index.ipynb
+++ b/index.ipynb
@@ -215,12 +215,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.0,\n",
+       " 0.25,\n",
+       " 0.5,\n",
+       " 0.75,\n",
+       " 1.0,\n",
+       " 1.25,\n",
+       " 1.5,\n",
+       " 1.75,\n",
+       " 2.0,\n",
+       " 2.25,\n",
+       " 2.5,\n",
+       " 2.75,\n",
+       " 3.0,\n",
+       " 3.25,\n",
+       " 3.5,\n",
+       " 3.75,\n",
+       " 4.0,\n",
+       " 4.25,\n",
+       " 4.5,\n",
+       " 4.75,\n",
+       " 5.0,\n",
+       " 5.25,\n",
+       " 5.5,\n",
+       " 5.75,\n",
+       " 6.0]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "six = list(map(lambda x: x/4.0, range_twenty_four))\n",
-    "six\n"
+    "six"
    ]
   },
   {
