--- a/index.ipynb
+++ b/index.ipynb
@@ -1274,16 +1274,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'x': [1.0, 2, 3.0],\n",
+       "  'y': [-1.0, 4, 9.0],\n",
+       "  'text': ['', \"f' = 5.0\", ''],\n",
+       "  'mode': 'text+lines',\n",
+       "  'textposition': 'bottom center'},\n",
+       " {'x': [3, 3],\n",
+       "  'y': [4, 9],\n",
+       "  'mode': 'lines+text',\n",
+       "  'name': 'y2 - y1 = 9 - 4 = 5',\n",
+       "  'text': ['4', '9']},\n",
+       " {'x': [2, 3],\n",
+       "  'y': [4, 4],\n",
+       "  'mode': 'lines+text',\n",
+       "  'name': 'x2 - x1 = 5 - 4 = 1',\n",
+       "  'text': ['2', '3']}]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from calculus import delta_traces\n",
     "\n",
     "\n",
     "delta_layout = build_layout(x_axis = {'title': 'number of seconds'}, y_axis = {'title': 'distance'})\n",
     "x_squared_delta_traces = delta_traces(x_squared, 2, line_length = 2, delta_x = 1)\n",
-    "x_squared_delta_traces\n",
+    "x_squared_delta_traces\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "plot([trace_x_squared, *x_squared_delta_traces], delta_layout)"
    ]
   },
