Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -5554,7 +5554,7 @@
    "outputs": [],
    "source": [
     "### Since y=x^2 so the first differentiate is f'(x)=2*x and to get one point's tangent \n",
-    "### just simply have"
+    "### just simply have x="
    ]
   }
  ],
